# sas

./: .cursorignore  .gitignore  Cargo.toml  GALLERY.md  README.md  README.ru.md  README_RU.md  WGPU_MIGRATION.md  WGPU_MIGRATION_NOTES.md  bench_triangle.rs  index.html  inspect_md3.rs  mod.d  original_mod.rs  particle.d  q3-resources  run_dedicated_server.sh  run_defrag.sh  run_ios_sim.sh  run_server.sh  sas_config.cfg  sas_history.txt  setup_cpma_models.sh  test_md3_standalone.rs  test_rocket_rotation.rs  weapon.d
.github/workflows/: release-tools.yml  release.yml
assets/: icon.icns
data/test_data/: test_arr.json  (+2 more)
maps/: 0-arena.json  0-arena_navgraph.json
scripts/: build_release.bat  build_release.sh  build_standalone.bat  build_standalone.sh  build_wasm.sh  build_windows.sh  convert_textures.sh  create_release.sh  download_cpma_models.sh  edit_map_selector.sh  install.bat  install.ps1  install.sh  publish_release.sh  quick_release.sh  rebuild_app_icon.sh  run_defrag.sh  run_network_tests.sh  run_shader_test.sh  setup_cpma_models.sh
src/: app.rs  bot_handler.rs  compat_rand.rs  console.rs  cvar.rs  dedicated_server.rs  game_loop.rs  hud_scoreboard.rs  lib.rs  main.rs  main_wgpu.rs  main_wgpu_full.rs  menu.rs  profiler.rs  profiler_display.rs  resource_path.rs  time.rs  weapon_handler.rs
test_md3_standalone/: Cargo.toml  README.md
tests/: network_animation.rs  network_basic.rs  network_interpolation.rs  network_movement.rs
tools/: create_opaque_icon.py  export_maps.rs  fix_logo.py  generate_app_icons.py  generate_navgraph.rs  map_editor.rs  test_model.rs
(+120 files in other folders)
