[package]
name = "sas3"
version = "0.0.2"
edition = "2021"
authors = ["Aleksandr Kuznetsov", "3d[Power]"]

[lib]
name = "sas"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["profiler"]
profiler = []

[[bin]]
name = "sas"
path = "src/main.rs"

[[bin]]
name = "map_editor"
path = "tools/map_editor.rs"

[[bin]]
name = "generate_navgraph"
path = "tools/generate_navgraph.rs"

[[bin]]
name = "test_model"
path = "tools/test_model.rs"

[[bin]]
name = "dedicated_server"
path = "src/dedicated_server.rs"

[dependencies]
macroquad = { version = "0.4.14", features = ["audio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.24"
once_cell = "1.19"
futures = "0.3"
lazy_static = "1.4"
bincode = "1.3"
byteorder = "1.5"
image = "0.24"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[package.metadata.ios]
name = "SAS III"
bundle_identifier = "com.kuznetsov.sas3"
version = "0.0.1"
minimum_os_version = "13.0"

[package.metadata.bundle]
name = "SAS III"
identifier = "com.kuznetsov.sas3"
icon = ["assets/icon.icns", "assets/icon.ico"]
